--- a/index.qmd
+++ b/index.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Ryan R. Bart"
 about:
-    template: broadside
+    template: trestles
     links:
         - text: Email
           icon: envelope
@@ -24,12 +24,12 @@ resources: content/bart_cv.pdf
 
 ::: column-page
 
-Hello! I am Ryan Bart, a scientist at the [Califonia Air Resources Board (CARB)](https://ww2.arb.ca.gov/) working in the [Nature-Based Strategies Section](https://ww2.arb.ca.gov/our-work/programs/nature-based-strategies/about).
-In my role at CARB, I use ecosystem modeling of present-day and future conditions to help quantify the contribution of Natural and Working Lands to California's [goal](https://lci.ca.gov/climate/carbon-neutrality.html) of carbon neutrality by 2045.
+Hello, I’m Ryan Bart. I’m a scientist at the [California Air Resources Board (CARB)](https://ww2.arb.ca.gov/), where I work in the [Nature-Based Strategies Section](https://ww2.arb.ca.gov/our-work/programs/nature-based-strategies/about).
+My work focuses on ecosystem modeling—using simulations of present and future conditions to understand how California’s Natural and Working Lands contribute to the state’s goal of [carbon neutrality by 2045](https://lci.ca.gov/climate/carbon-neutrality.html).
 
-I am trained broadly as a geographer and, more specifically, as an ecohydrologist—the latter being the study of how hydrological and ecological systems interact.
-I am also a principal developer for [RHESSys](http://rhessys.github.io), a process-based ecohydrologic model designed to simulate feedbacks between vegetation, water, nutrients, and fire.
+My background is in geography broadly, and more specifically in ecohydrology—the study of how hydrological and ecological systems interact.
+I’m also a principal developer for [RHESSys](http://rhessys.github.io), a process-based ecohydrologic model that explores feedbacks among vegetation, water, nutrients, and fire.
 
-I was a born and raised in California, and after having lived up and down the state, I currently reside in the Sacramento region with my wife, Ana, and our two boys.
+I was born and raised in California, and after having lived up and down the state, I currently reside in the Sacramento region with my wife, Ana, and our two boys.
 
 :::
