--- a/index.qmd
+++ b/index.qmd
@@ -3,9 +3,6 @@ title: "Ryan R. Bart"
 about:
     template: trestles
     links:
-        - text: Email
-          icon: envelope
-          href: mailto:rrbart@gmail.com
         - text: Scholar
           icon: google
           href: https://scholar.google.com/citations?user=Uon6JToAAAAJ
@@ -15,6 +12,9 @@ about:
         - text: LinkedIn
           icon: linkedin
           href: https://www.linkedin.com/in/ryanrbart/
+        - text: Email
+          icon: envelope
+          href: mailto:rrbart@gmail.com
         - text: C.V.
           icon: file-text
           href: content/bart_cv.pdf
@@ -22,12 +22,12 @@ image: img/headshot_by_Veronica_Adrover.jpg
 resources: content/bart_cv.pdf
 ---
 
-::: column-page
+::: {hero-heading}
 
-Hello, I’m Ryan Bart. I’m a scientist at the [California Air Resources Board (CARB)](https://ww2.arb.ca.gov/), where I work in the [Nature-Based Strategies Section](https://ww2.arb.ca.gov/our-work/programs/nature-based-strategies/about).
-My work focuses on ecosystem modeling—using simulations of present and future conditions to understand how California’s Natural and Working Lands contribute to the state’s goal of [carbon neutrality by 2045](https://lci.ca.gov/climate/carbon-neutrality.html).
+Hello! I’m Ryan Bart, a scientist at the [California Air Resources Board (CARB)](https://ww2.arb.ca.gov/), where I work in the [Nature-Based Strategies Section](https://ww2.arb.ca.gov/our-work/programs/nature-based-strategies/about).
+My work focuses on ecosystem modeling—using simulations of present and future conditions to understand how vegetation in California’s Natural and Working Lands contributes to the state’s goal of [carbon neutrality by 2045](https://lci.ca.gov/climate/carbon-neutrality.html).
 
-My background is in geography broadly, and more specifically in ecohydrology—the study of how hydrological and ecological systems interact.
+My background is in geography broadly, and more specifically in ecohydrology—the study of how ecological and hydrological systems interact.
 I’m also a principal developer for [RHESSys](http://rhessys.github.io), a process-based ecohydrologic model that explores feedbacks among vegetation, water, nutrients, and fire.
 
 I was born and raised in California, and after having lived up and down the state, I currently reside in the Sacramento region with my wife, Ana, and our two boys.
